Fix for WMS-8928: If outer list got selected then the label values are not visible in inner list when list inside list is available.
[Handles the stylings when list is placed within a list]

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1361,6 +1361,14 @@ body.modal-open {
         color: inherit;
         opacity: 0.7;
       }
+      //handles list stylings having list within a list
+      .app-livelist {
+        .app-livelist-container {
+          li.app-list-item {
+            color: initial;
+          }
+        }
+      }
     }
    }
   .popover.inline {
